fix: username regex, auth jwttoken logic
