# backend/controllers/v1/auth/login.go
@@ -5,17 +5,13 @@ import (
 	"flower-backend/libs"
 	"flower-backend/models"
 	"net/http"
+	"time"
 
 	"github.com/gin-gonic/gin"
 	"go.uber.org/zap"
 	"golang.org/x/crypto/bcrypt"
 	"gorm.io/gorm"
 )
-
-type LoginInput struct {
-	Email    string `form:"email" binding:"required,email"`
-	Password string `form:"password" binding:"required"`
-}
 
 // Login godoc
 //
@@ -26,11 +22,11 @@ type LoginInput struct {
 //	@Produce		json
 //	@Param			email		formData	string					true	"Email address"
 //	@Param			password	formData	string					true	"Password (min 8 characters, must include uppercase, lowercase, digit, and special character)"
-//	@Success		200		{object}	map[string]interface{}	"Login successful, returns tokens"
-//	@Failure		400		{object}	map[string]interface{}	"Bad request - invalid input"
-//	@Failure		401		{object}	map[string]interface{}	"Unauthorized - invalid credentials"
-//	@Failure		500		{object}	map[string]interface{}	"Internal server error"
-//	@Securuty		BearerAuth
+//	@Success		200			{object}	map[string]interface{}	"Login successful, returns tokens"
+//	@Failure		400			{object}	map[string]interface{}	"Bad request - invalid input"
+//	@Failure		401			{object}	map[string]interface{}	"Unauthorized - invalid credentials"
+//	@Failure		500			{object}	map[string]interface{}	"Internal server error"
+//	@Security		BearerAuth
 //	@Router			/auth/login [post]
 func (ac *authController) Login(c *gin.Context) {
 	email := c.PostForm("email")
@@ -79,6 +75,7 @@ func (ac *authController) Login(c *gin.Context) {
 	// set cookies
 	c.SetSameSite(http.SameSiteStrictMode)
 	c.SetCookie("refreshToken", refreshToken, 7*24*60*60, "/", "", ac.cfg.GO_ENV == "production", true)
+	c.SetCookie("accessToken", accessToken, int(1*time.Hour.Seconds()), "/", "", ac.cfg.GO_ENV == "production", true)
 
 	c.JSON(http.StatusOK, gin.H{
 		"message": "Login successful",
@@ -88,8 +85,7 @@ func (ac *authController) Login(c *gin.Context) {
 			"email":    user.Email,
 			"role":     user.Role,
 		},
-		"accessToken": accessToken,
 	})
 
-	ac.logger.Info("Login successful", zap.String("user", user.Username), zap.String("accessToken", accessToken))
+	ac.logger.Info("Login successful", zap.Any("user", user))
 }
